[package]
name = "gmrs"
version = "0.1.0"
authors = ["diogo <diogo464@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
gmrs_impl = { path = "./gmrs_impl" }
lazy_static = "1.4.0"
thiserror = "1.0.24"

[build-dependencies]
cc = "1.0"

[[example]]
name = "hello_world"
crate-type = ["cdylib"]

[[example]]
name = "threads"
crate-type = ["cdylib"]
